Adicionando funcionalidades de chat via I.A da Gemini, com o gerador via PDF ou excel por email de acordo com a preferencia do cliente.

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -3,5 +3,8 @@ project_id = "fitycdhysdzafkuyxbbw"
 [functions.analyze-expenses]
 verify_jwt = true
 
+[functions.ai-chat]
+verify_jwt = true
+
 [functions.send-monthly-report]
 verify_jwt = true
